--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,9 +98,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".SchoolRegistrationActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
-            android:theme="@style/AppTheme1"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".DrawerActivity"
             android:screenOrientation="portrait"
