--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile files('libs/universal-image-loader-1.6.1-with-src.jar')
     compile files('libs/org.apache.http.legacy.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.android.gms:play-services:8.4.0'
 }
