--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,6 +121,10 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity android:name=".homework.newhomework.CustomPhotoGalleryActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" ></activity>
+
       <!--  <activity
             android:name=".trackpupil.MapsActivity"
             android:label="Map"
