--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,11 @@
             android:windowSoftInputMode="adjustPan" >
         </activity>-->
 
+        <activity
+            android:name=".view.FullImageViewPager"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
         <receiver
             android:name="com.google.android.gcm.GCMBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND" >
