--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile files('libs/org.apache.http.legacy.jar')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.android.support:palette-v7:23.0.1'
 }
