--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -125,6 +125,15 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" ></activity>
 
+        <activity
+            android:name=".homework.newhomework.customgallery.multiselectgallery.PhotoAlbumActivity"
+            android:noHistory="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".homework.newhomework.customgallery.multiselectgallery.SelectPhotoActivity"
+            android:label="select_photo"
+            android:screenOrientation="portrait" />
+
       <!--  <activity
             android:name=".trackpupil.MapsActivity"
             android:label="Map"
