--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -111,7 +111,7 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-        <meta-data
+      <!--  <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCJpf4AV7DiZR44IjWI2HD4wB3zraP1Gow" />
 
@@ -119,11 +119,35 @@
             android:theme="@style/AppTheme"
             android:label="Map"
             android:screenOrientation="portrait">
+        </activity>-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCNhQCnjk-a2qwAjSfxrYWUyx4czPnb3Yw" />
+
+        <activity android:name=".trackpupil.TrackShowMap"
+            android:theme="@style/AppTheme"
+            android:label="Map"
+            android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name=".homework.newhomework.CustomPhotoGalleryActivity"
+        <activity
+            android:name=".trackpupil.MapsActivity"
+            android:label="Map"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+
+        <activity
+            android:name=".homework.newhomework.CustomPhotoGalleryActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" ></activity>
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".homework.newhomework.customgallery.multiselectgallery.PhotoAlbumActivity"
+            android:noHistory="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".homework.newhomework.customgallery.multiselectgallery.SelectPhotoActivity"
+            android:label="select_photo"
+            android:screenOrientation="portrait" />
 
       <!--  <activity
             android:name=".trackpupil.MapsActivity"
